various best practice improvements
- “next” should always be executed to properly end the route handler
chain and to aid in preventing leaky callback conditions
- slightly modified error handling pattern so that next is always called
- split test dependencies into devDependencies within package.json
- added scripts.test to package.json
- added case sensitivity on routes

--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-    "name": "syscoin-api",
-    "main": "server.js",
-    "repository": "https://github.com/syscoin/syscoin-api.git",
-    "dependencies": {
-        "express": "~4.0.0",
-        "body-parser": "~1.0.1",
-        "syscoin": "~2.1.x",
-        "should": "~4.0.4",
-        "mocha": "~1.21.x",
-        "supertest": "~0.13.x"
-
-    }
+  "name": "syscoin-api",
+  "main": "server.js",
+  "repository": "https://github.com/syscoin/syscoin-api.git",
+  "dependencies": {
+    "express": "~4.0.0",
+    "body-parser": "~1.0.1",
+    "syscoin": "~2.1.x"
+  },
+  "devDependencies": {
+    "mocha": "~1.21.x",
+    "should": "~4.0.4",
+    "supertest": "~0.13.x"
+  },
+  "scripts": {
+    "test": "mocha -R min ./test/*"
+  }
 }
-
