various changes part 2
- server.js now exports the app
- normalized quoting in server.js to single quotes
- refactored handleError so that it has the standard express error
handling middleware function signature
- supertest now binds directly to a server that starts when tests are
run
- migrated to chai.js, a better assertion library, in my opinion
- upgraded expressjs from 4.0 to 4.9 due to an apparent bug in the
app’s router class that appears to cause next functions to make a call
to res.send. appears to be fixed with the upgrade.

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "main": "server.js",
   "repository": "https://github.com/syscoin/syscoin-api.git",
   "dependencies": {
-    "express": "~4.0.0",
     "body-parser": "~1.0.1",
+    "express": "^4.9.0",
     "syscoin": "~2.1.x"
   },
   "devDependencies": {
+    "chai": "^1.9.1",
     "mocha": "~1.21.x",
-    "should": "~4.0.4",
     "supertest": "~0.13.x"
   },
   "scripts": {
