added logging and split out mdw implementations
- split out cor implementation from server.js into folder
./middleware/cors
- added logging via bunyan and configurable streams for both stdout and
file logging
- requests now get a uuid via mdw
- requests now get a logger instance
- requests are now logged via mdw when they exit and leave the system
- added “npm start” script for starting the server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "repository": "https://github.com/syscoin/syscoin-api.git",
   "dependencies": {
     "body-parser": "~1.0.1",
+    "bunyan": "^1.0.1",
     "express": "^4.9.0",
+    "node-uuid": "^1.4.1",
     "syscoin": "~2.1.x"
   },
   "devDependencies": {
@@ -13,6 +15,7 @@
     "supertest": "~0.13.x"
   },
   "scripts": {
-    "test": "mocha -R min ./test/*"
+    "test": "mocha -R min ./test/*",
+    "start": "node ./server.js | ./node_modules/bunyan/bin/bunyan"
   }
 }
