--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "bunyan": "^1.0.1",
     "express": "^4.9.0",
     "node-uuid": "^1.4.1",
-    "syscoin": "~2.1.x"
+    "syscoin": "~2.1.x",
+    "verror": "^1.4.0"
   },
   "devDependencies": {
     "chai": "^1.9.1",
