--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "syscoin-api-server",
+  "name": "syscoin-api",
   "description": "A full featured api for interacting with Syscoin commands both at an RPC level, as a REST API, and more.",
   "version": "0.1.0",
   "main": "server.js",
@@ -7,7 +7,7 @@
     "syscoin",
     "rpc",
     "api"
-   ],
+  ],
   "author": {
     "name": "Dan Wasyluk",
     "email": "dan@syscoin.org",
@@ -15,30 +15,19 @@
   },
   "contributors": [
     {
-        "name": "davidgwking",
-        "email": "na@na.com"
+      "name": "davidgwking",
+      "email": "na@na.com"
     },
     {
-        "name": "Syscoin Developers",
-        "email": "syscoin@syscoin.org"
+      "name": "Syscoin Developers",
+      "email": "syscoin@syscoin.org"
     }
   ],
   "repository": "https://github.com/syscoin/syscoin-api.git",
-  "dependencies": {
-    "body-parser": "~1.0.1",
-    "bunyan": "^1.0.1",
-    "express": "^4.9.0",
-    "node-uuid": "^1.4.1",
-    "swagger-node-express": "~2.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "chai": "^1.9.1",
-    "mocha": "~1.21.x",
-    "supertest": "~0.13.x"
-  },
-  "scripts": {
-    "test": "mocha -R min ./test/*",
-    "start": "node ./server.js | ./node_modules/bunyan/bin/bunyan"
+    "gulp-exec": "^2.1.2",
+    "gulp-shell": "^0.5.2"
   },
   "bugs": {
     "url": "https://github.com/syscoin/syscoin-api/issues"
